# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#

# This file represents global knowledge about all the mojom targets building
# browser-to-renderer exposed mojom interfaces. Developers are responsible for
# maintaining this file to match addition and removal of newly exposed targets.
# This is part of our automated fuzzing of the browser/renderer interface that
# lives at `//chrome/test/fuzzing/renderer_fuzzing/ipc_fuzzing`.
# As for now, we are only listing those targets for interfaces exposed on
# Linux.

browser_exposed_mojom_targets = [
  "//cc/mojom:layer_type",
  "//cc/mojom:mojom",
  "//chrome/browser/cart:mojo_bindings",
  "//chrome/browser/companion/core/mojom:mojo_bindings",
  "//chrome/browser/lens/core/mojom:mojo_bindings",
  "//chrome/browser/media:mojo_bindings",
  "//chrome/browser/new_tab_page/modules/file_suggestion:mojo_bindings",
  "//chrome/browser/new_tab_page/modules/safe_browsing:mojo_bindings",
  "//chrome/browser/new_tab_page/modules/v2/calendar:mojo_bindings",
  "//chrome/browser/new_tab_page/modules/v2/most_relevant_tab_resumption:mojo_bindings",
  "//chrome/browser/resource_coordinator:mojo_bindings",
  "//chrome/browser/ui/webui/access_code_cast:mojo_bindings",
  "//chrome/browser/ui/webui/app_home:mojo_bindings",
  "//chrome/browser/ui/webui/app_service_internals:mojo_bindings",
  "//chrome/browser/ui/webui/bluetooth_internals:mojo_bindings",
  "//chrome/browser/ui/webui/connectors_internals:mojo_bindings",
  "//chrome/browser/ui/webui/data_sharing_internals:mojo_bindings",
  "//chrome/browser/ui/webui/discards:mojo_bindings",
  "//chrome/browser/ui/webui/downloads:mojo_bindings",
  "//chrome/browser/ui/webui/hats:mojo_bindings",
  "//chrome/browser/ui/webui/internals/user_education:mojo_bindings",
  "//chrome/browser/ui/webui/location_internals:mojo_bindings",
  "//chrome/browser/ui/webui/new_tab_page_third_party:mojo_bindings",
  "//chrome/browser/ui/webui/new_tab_page:mojo_bindings",
  "//chrome/browser/ui/webui/new_tab_page/foo:mojo_bindings",
  "//chrome/browser/ui/webui/omnibox:mojo_bindings",
  "//chrome/browser/ui/webui/on_device_internals:mojom",
  "//chrome/browser/ui/webui/privacy_sandbox:mojo_bindings",
  "//chrome/browser/ui/webui/reset_password:mojo_bindings",
  "//chrome/browser/ui/webui/search_engine_choice:mojo_bindings",
  "//chrome/browser/ui/webui/segmentation_internals:mojo_bindings",
  "//chrome/browser/ui/webui/side_panel/bookmarks:mojo_bindings",
  "//chrome/browser/ui/webui/side_panel/customize_chrome:mojo_bindings",
  "//chrome/browser/ui/webui/side_panel/reading_list:mojo_bindings",
  "//chrome/browser/ui/webui/suggest_internals:mojo_bindings",
  "//chrome/browser/ui/webui/tab_search:mojo_bindings",
  "//chrome/browser/ui/webui/tab_strip:mojo_bindings",
  "//chrome/browser/ui/webui/tabs:mojo_bindings",
  "//chrome/browser/ui/webui/usb_internals:mojo_bindings",
  "//chrome/browser/ui/webui/web_app_internals:mojo_bindings",
  "//chrome/browser/ui/webui/whats_new:mojo_bindings",
  "//chrome/browser/web_applications/mojom:mojom_web_apps_enum",
  "//chrome/common:available_offline_content_mojom",
  "//chrome/common:mojo_bindings",
  "//chrome/common:offline_page_auto_fetcher_mojom",
  "//chrome/common:supervised_user_commands_mojom",
  "//chrome/common/accessibility:mojo_bindings",
  "//chrome/common/cart:mojo_bindings",
  "//chrome/common/compose:mojo_bindings",
  "//chrome/common/importer:interfaces",
  "//chrome/common/search:mojo_bindings",
  "//chrome/services/file_util/public/mojom:mojom",
  "//chrome/services/media_gallery_util/public/mojom:mojom",
  "//chrome/services/printing/public/mojom:mojom",
  "//chrome/services/removable_storage_writer/public/mojom:mojom",
  "//components/attribution_reporting:mojom",
  "//components/attribution_reporting:registration_header_error_mojom",
  "//components/attribution_reporting:registration_mojom",
  "//components/attribution_reporting:source_type_mojom",
  "//components/autofill/content/common/mojom:mojom",
  "//components/autofill/core/common/mojom:mojo_types",
  "//components/browsing_topics/mojom:mojo_bindings",
  "//components/commerce/core/internals/mojom:mojo_bindings",
  "//components/commerce/core/mojom:mojo_bindings",
  "//components/compose/core/browser:mojo_bindings",
  "//components/content_capture/common:mojo_interfaces",
  "//components/content_capture/common:mojo_types",
  "//components/content_settings/common:mojom",
  "//components/content_settings/core/common:content_settings_enums",
  "//components/content_settings/core/common:content_settings_types",
  "//components/content_settings/core/common:mojo_bindings",
  "//components/continuous_search/common/public/mojom:mojom",
  "//components/device_signals/core/common/mojom:mojom",
  "//components/digital_goods/mojom:mojom",
  "//components/discardable_memory/public/mojom:mojom",
  "//components/dom_distiller/content/common/mojom:mojom",
  "//components/dom_distiller/core/mojom:mojom",
  "//components/download/public/common:interfaces",
  "//components/facilitated_payments/core/mojom:facilitated_payments_agent_mojom",
  "//components/facilitated_payments/core/mojom:pix_code_validator_mojom",
  "//components/feed/mojom:mojo_bindings",
  "//components/global_media_controls/public/mojom:device_service",
  "//components/guest_view/common:mojom",
  "//components/heap_profiling/in_process:mojom",
  "//components/history_clusters/history_clusters_internals/webui:mojo_bindings",
  "//components/history_clusters/public/mojom:mojo_bindings",
  "//components/language_detection/content/common:common",
  "//components/lens:lens_mojo",
  "//components/media_router/common/mojom:debugger",
  "//components/media_router/common/mojom:logger",
  "//components/media_router/common/mojom:media_controller",
  "//components/media_router/common/mojom:media_route_provider_id",
  "//components/media_router/common/mojom:media_router",
  "//components/media_router/common/mojom:route_request_result_code",
  "//components/metrics/public/mojom:call_stack_mojo_bindings",
  "//components/metrics/public/mojom:histogram_fetcher_mojo_bindings",
  "//components/metrics/public/mojom:single_sample_metrics_mojo_bindings",
  "//components/metrics/structured/mojom:mojom",
  "//components/mirroring/mojom:common",
  "//components/mirroring/mojom:service",
  "//components/network_hints/common:mojo_bindings",
  "//components/no_state_prefetch/common:mojo_bindings",
  "//components/omnibox/browser:mojo_bindings",
  "//components/optimization_guide/content/mojom:mojo_interfaces",
  "//components/optimization_guide/core:interfaces",
  "//components/optimization_guide/optimization_guide_internals/webui:mojo_bindings",
  "//components/os_crypt/async/common:algorithm_mojom",
  "//components/os_crypt/async/common:common_mojom",
  "//components/page_image_service/mojom:mojo_bindings",
  "//components/page_load_metrics/common:page_load_metrics_mojom",
  "//components/paint_preview/common/mojom:mojom",
  "//components/password_manager/services/csv_password/public/mojom:mojom",
  "//components/payments/mojom:mojom",
  "//components/performance_manager/public/mojom:mojom",
  "//components/printing/common:mojo_interfaces",
  "//components/safe_browsing/content/common:interfaces",
  "//components/safe_browsing/core/common:interfaces",
  "//components/services/on_device_translation/public/mojom:mojom",
  "//components/schema_org/common:improved_mojom",
  "//components/schema_org/common:mojom",
  "//components/security_interstitials/core/common/mojom:mojom",
  "//components/services/filesystem/public/mojom:mojom",
  "//components/services/font/public/mojom:mojom",
  "//components/services/heap_profiling/public/mojom:mojom",
  "//components/services/language_detection/public/mojom:mojom",
  "//components/services/paint_preview_compositor/public/mojom:mojom",
  "//components/services/patch/public/mojom:mojom",
  "//components/services/print_compositor/public/mojom:mojom",
  "//components/services/quarantine/public/mojom:mojom",
  "//components/services/storage/privileged/mojom:mojom_webui",
  "//components/services/storage/public/mojom:mojom",
  "//components/services/storage/public/mojom/buckets:buckets",
  "//components/services/storage/public/mojom/filesystem:filesystem",
  "//components/services/unzip/public/mojom:mojom",
  "//components/site_engagement/core/mojom:mojo_bindings",
  "//components/spellcheck/common:interfaces",
  "//components/subresource_filter/content/mojom:mojom",
  "//components/subresource_filter/core/mojom:mojom",
  "//components/tab_groups/public/mojom:mojo_bindings",
  "//components/translate/content/common:common",
  "//components/variations:variations_mojom",
  "//components/visitedlink/common:interfaces",
  "//components/viz/service/debugger/mojom:mojom",
  "//components/web_cache/public/mojom:mojom",
  "//components/web_package/mojom:mojom",
  "//components/webapps/common:mojo_bindings",
  "//components/webapps/services/web_app_origin_association/public/mojom:mojom",
  "//content/browser/attribution_reporting:internals_mojo_bindings",
  "//content/browser/attribution_reporting:mojo_bindings",
  "//content/browser/attribution_reporting:registration_result_mojom",
  "//content/browser/indexed_db:internals_mojo_bindings",
  "//content/browser/private_aggregation:mojo_bindings",
  "//content/browser/process_internals:mojo_bindings",
  "//content/browser/tracing/trace_report:mojo_bindings",
  "//content/browser/xr/webxr_internals/mojom:mojo_bindings",
  "//content/common:mojo_bindings",
  "//content/public/common:interfaces",
  "//content/public/common:renderer_type",
  "//device/bluetooth/public/mojom:deprecated_experimental_interfaces",
  "//device/bluetooth/public/mojom:mojom",
  "//device/gamepad/public/mojom:mojom",
  "//device/vr/public/mojom:isolated_xr_service",
  "//device/vr/public/mojom:test_mojom",
  "//device/vr/public/mojom:vr_service",
  "//device/vr/public/mojom:xr_common",
  "//extensions/common:mojom",
  "//extensions/common/api:mojom",
  "//gpu/ipc/common:gmb_interface",
  "//gpu/ipc/common:gpu_channel_mojom",
  "//gpu/ipc/common:gpu_preferences_interface",
  "//gpu/ipc/common:interfaces",
  "//gpu/ipc/common:surface_handle",
  "//gpu/ipc/common:vulkan_interface",
  "//ipc:mojom_constants",
  "//ipc:mojom",
  "//media/capture/mojom:image_capture",
  "//media/capture/mojom:video_capture_buffer",
  "//media/capture/mojom:video_capture_types",
  "//media/capture/mojom:video_capture",
  "//media/capture/mojom:video_effects_manager",
  "//media/learning/mojo/public/mojom:mojom",
  "//media/midi:mojo",
  "//media/mojo/mojom:audio_data",
  "//media/mojo/mojom:encryption_pattern",
  "//media/mojo/mojom:mojom",
  "//media/mojo/mojom:remoting_common",
  "//media/mojo/mojom:remoting",
  "//media/mojo/mojom:speech_recognition_audio_forwarder",
  "//media/mojo/mojom:speech_recognition",
  "//media/mojo/mojom:web_speech_recognition",
  "//media/mojo/mojom/stable:native_pixmap_handle",
  "//media/mojo/mojom/stable:stable_video_decoder",
  "//mojo/public/interfaces/bindings:bindings",
  "//mojo/public/mojom/base:base",
  "//mojo/public/mojom/base:protobuf_support",
  "//pdf/mojom:mojom",
  "//printing/backend/mojom:mojom",
  "//printing/mojom:mojom",
  "//printing/mojom:printing_context",
  "//sandbox/policy/mojom:mojom",
  "//services/accessibility/public/mojom:automation_client",
  "//services/accessibility/public/mojom:automation",
  "//services/accessibility/public/mojom:mojom",
  "//services/audio/public/mojom:mojom",
  "//services/cert_verifier/public/mojom:mojom",
  "//services/data_decoder/public/mojom:mojom_xml_parser",
  "//services/data_decoder/public/mojom:mojom",
  "//services/device/public/mojom:device_service",
  "//services/device/public/mojom:generic_sensor",
  "//services/device/public/mojom:geolocation_internals",
  "//services/device/public/mojom:geoposition",
  "//services/device/public/mojom:mojom",
  "//services/device/public/mojom:usb_test",
  "//services/device/public/mojom:usb",
  "//services/image_annotation/public/mojom:mojom",
  "//services/media_session/public/mojom:mojom",
  "//services/metrics/public/mojom:mojom",
  "//services/network/public/mojom:cookies_mojom",
  "//services/network/public/mojom:mojom_attribution",
  "//services/network/public/mojom:mojom_first_party_sets",
  "//services/network/public/mojom:mojom_host_resolver",
  "//services/network/public/mojom:mojom_ip_address",
  "//services/network/public/mojom:mojom_network_anonymization_key",
  "//services/network/public/mojom:mojom_network_isolation_key",
  "//services/network/public/mojom:mojom_network_param",
  "//services/network/public/mojom:mojom_proxy_config",
  "//services/network/public/mojom:mojom_schemeful_site",
  "//services/network/public/mojom:mojom_shared_dictionary",
  "//services/network/public/mojom:mojom_structured_headers",
  "//services/network/public/mojom:mojom",
  "//services/network/public/mojom:url_loader_base",
  "//services/network/public/mojom:websocket_mojom",
  "//services/on_device_model/public/mojom:mojom",
  "//services/passage_embeddings/public/mojom:mojom",
  "//services/preferences/public/mojom:mojom",
  "//services/proxy_resolver/public/mojom:mojom",
  "//services/resource_coordinator/public/mojom:mojom",
  "//services/screen_ai/public/mojom:factory",
  "//services/screen_ai/public/mojom:mojom",
  "//services/service_manager/public/mojom:constants",
  "//services/service_manager/public/mojom:mojom",
  "//services/shape_detection/public/mojom:mojom",
  "//services/tracing/public/mojom:mojom",
  "//services/video_capture/public/mojom:constants",
  "//services/video_capture/public/mojom:mojom",
  "//services/video_effects/public/mojom:mojom",
  "//services/viz/privileged/mojom:mojom",
  "//services/viz/privileged/mojom/compositing:compositing",
  "//services/viz/privileged/mojom/gl:gl",
  "//services/viz/public/mojom:mojom",
  "//services/viz/public/mojom:shared_image_format",
  "//services/viz/public/mojom:singleplanar_format",
  "//services/webnn/public/mojom:mojom",
  "//skia/public/mojom:mojom",
  "//storage/browser/quota:mojo_bindings",
  "//third_party/blink/public/mojom:android_mojo_bindings",
  "//third_party/blink/public/mojom:authenticator_test_mojo_bindings",
  "//third_party/blink/public/mojom:color_scheme_mojo_bindings",
  "//third_party/blink/public/mojom:embedded_frame_sink_mojo_bindings",
  "//third_party/blink/public/mojom:memory_usage_monitor_linux_mojo_bindings",
  "//third_party/blink/public/mojom:mojom_core",
  "//third_party/blink/public/mojom:mojom_mhtml_load_result",
  "//third_party/blink/public/mojom:mojom_modules",
  "//third_party/blink/public/mojom:mojom_platform",
  "//third_party/blink/public/mojom:script_type_mojo_bindings",
  "//third_party/blink/public/mojom:web_bluetooth_mojo_bindings",
  "//third_party/blink/public/mojom:web_feature_mojo_bindings",
  "//third_party/blink/public/mojom/gpu:gpu",
  "//third_party/blink/public/mojom/origin_trial_feature:origin_trial_feature",
  "//third_party/blink/public/mojom/origin_trial_state:origin_trial_state",
  "//third_party/blink/public/mojom/private_network_device:private_network_device",
  "//third_party/blink/public/mojom/quota:quota",
  "//third_party/blink/public/mojom/runtime_feature_state:runtime_feature_state",
  "//third_party/blink/public/mojom/service_worker:storage",
  "//third_party/blink/public/mojom/storage_key:storage_key",
  "//third_party/blink/public/mojom/tokens:tokens",
  "//third_party/blink/public/mojom/usb:usb",
  "//ui/accessibility:ax_constants_mojo",
  "//ui/accessibility:ax_enums_mojo",
  "//ui/accessibility:ax_features_mojo",
  "//ui/accessibility/mojom:mojom",
  "//ui/base/cursor/mojom:cursor_type",
  "//ui/base/cursor/mojom:mojom",
  "//ui/base/dragdrop/mojom:mojom",
  "//ui/base/ime/mojom:mojom",
  "//ui/base/mojom:mojom",
  "//ui/color:mojom",
  "//ui/display/mojom:mojom",
  "//ui/events/mojom:event_latency_metadata_mojom",
  "//ui/events/mojom:mojom",
  "//ui/gfx/geometry/mojom:mojom",
  "//ui/gfx/image/mojom:mojom",
  "//ui/gfx/mojom:hdr_metadata",
  "//ui/gfx/mojom:mojom",
  "//ui/gfx/mojom:native_handle_types",
  "//ui/gfx/range/mojom:mojom",
  "//ui/gl/mojom:mojom",
  "//ui/latency/mojom:mojom",
  "//ui/ozone/platform/wayland/mojom:mojom",
  "//ui/ozone/public/mojom:gesture_properties_service",
  "//ui/webui/resources/cr_components/app_management:mojo_bindings",
  "//ui/webui/resources/cr_components/certificate_manager:mojom",
  "//ui/webui/resources/cr_components/color_change_listener:mojom",
  "//ui/webui/resources/cr_components/commerce:mojo_bindings",
  "//ui/webui/resources/cr_components/customize_color_scheme_mode:mojom",
  "//ui/webui/resources/cr_components/help_bubble:mojo_bindings",
  "//ui/webui/resources/cr_components/history_clusters:mojo_bindings",
  "//ui/webui/resources/cr_components/history_embeddings:mojo_bindings",
  "//ui/webui/resources/cr_components/most_visited:mojom",
  "//ui/webui/resources/cr_components/searchbox:mojo_bindings",
  "//ui/webui/resources/cr_components/theme_color_picker:mojom",
  "//ui/webui/resources/js/browser_command:mojo_bindings",
  "//ui/webui/resources/js/metrics_reporter:mojo_bindings",
  "//url/mojom:url_mojom_gurl",
  "//url/mojom:url_mojom_origin",
  "//url/mojom:url_mojom_scheme_host_port",
]
